# taio

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
.github/workflows/: clang-format-check.yml
app/: CMakeLists.txt  app.cpp  multigraph_cli.cpp  multigraph_cli.hpp
example/: big_multigraphs.txt  max_cycles.txt  medium_multigraphs.txt  simple_multigraphs.txt
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  core.cpp
libs/cycle-finder/: CMakeLists.txt  cycle_finder.cpp
libs/hamilton/: CMakeLists.txt  atsp_solver.cpp  flowGraph.cpp  hamilton.cpp
libs/metric/: CMakeLists.txt  metric.cpp
scripts/: plot_benchmark_results.py  plot_benchmark_results_pl.py  plot_many.sh  plot_many_pl.sh  run_bench_and_save_to_csv.sh  shell.nix
scripts/benchmark_results/: ExactMetric.csv  HeuristicMetric_ComparisonSort_DegreeConstant.csv  HeuristicMetric_ComparisonSort_DegreeLinear.csv  HeuristicMetric_CountingSort_DegreeConstant.csv  HeuristicMetric_CountingSort_DegreeLinear.csv  hamilton_k_cycles_approximation_changing_k.csv  hamilton_k_cycles_approximation_changing_n.csv  hamiltonian_extension_approximation_k_changing.csv  hamiltonian_extension_approximation_n_changing.csv  hamiltonian_extension_exact_k_changing.csv  hamiltonian_extension_exact_n_changing.csv  max_cycle_approximation_changing_k.csv  max_cycle_approximation_changing_n.csv  max_cycle_exact_changing_k.csv  max_cycle_exact_changing_n.csv
tests/: CMakeLists.txt  hamilton-k-cycles-count-tests.cpp  hamiltonian-extension-tests.cpp  max-cycle-tests.cpp  metric-tests.cpp
(+29 files in other folders)
